# xray-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  SPEC.md  config.example.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
.serena/: .gitignore  project.yml
app/: Cargo.toml
app/src/: config.rs  instance.rs  main.rs
kernel/: Cargo.toml
kernel/src/: config.rs  copy.rs  dialer.rs  dispatcher.rs  dns.rs  error.rs  lib.rs  net.rs  outbound.rs  pipe.rs  policy.rs  rcu.rs  router.rs  session.rs  sniff.rs  stats.rs  timer.rs  uuid.rs
kernel/src/controller/: dispatcher.rs  mod.rs  policy.rs  router.rs  session.rs
kernel/src/egress/: dialer.rs  dns.rs  mod.rs  outbound.rs
kernel/src/pipe/: copy.rs  mod.rs  outbound.rs  pipe.rs  proxy_protocol.rs  timer.rs  translation.rs  transport.rs
kernel/src/pipe_asm/: copy.rs  mod.rs  pipe.rs
kernel/src/route/: balance.rs  mod.rs  rule.rs  sniff.rs
kernel/src/runtime/: context.rs  dialer.rs  dns.rs  mod.rs  session.rs  tree.rs  user.rs
kernel/src/runtime/service/: mod.rs
kernel/src/types/: mod.rs  net.rs  uuid.rs
kernel/tests/: codec.rs  sniff.rs
new_kernel/: Cargo.toml
new_kernel/src/: config.rs  error.rs  function_util.rs  lib.rs  rcu_helper.rs
new_kernel/src/pipe/: inbound_transport.rs  mod.rs  outbound.rs  translation.rs
new_kernel/src/route/: mod.rs  sniff.rs
new_kernel/src/runtime/: dialer.rs  dns.rs  mod.rs  user.rs
new_kernel/src/runtime/service/: mod.rs
new_kernel/src/runtime/service_stack/: inbound.rs  mod.rs  system.rs
proxy/: Cargo.toml
proxy/src/: crypto.rs  dokodemo.rs  http.rs  io.rs  lib.rs  mux.rs  outbound.rs  shadowsocks.rs  socks.rs  trojan.rs  udp.rs  vless.rs  vmess.rs
proxy/src/vmess/: body.rs  crypto.rs  header.rs  user.rs
saas/: Cargo.toml  config.example.toml
saas/src/: api.rs  builder.rs  config.rs  controller.rs  egress_compile.rs  egress_config.rs  inbound_manager.rs  lib.rs  main.rs  panel.rs  serverstatus.rs
saas/src/sspanel/: mod.rs  model.rs
saas/tests/: integration.rs
transport/: Cargo.toml
transport/src/: grpc.rs  httpupgrade.rs  lib.rs  listener.rs  stream.rs  tls.rs  ws.rs
