[workspace]
resolver = "3"
members = ["kernel", "proxy", "transport", "app", "saas", "new_kernel"]

[workspace.package]
edition = "2024"
version = "0.1.1-alpha"
license = "unfree"

[workspace.dependencies]
# internal
kernel = { path = "kernel" }
proxy = { path = "proxy" }
transport = { path = "transport" }

# runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tokio-stream = {version = "0.1", features = ["net"]}
futures = "0.3"
bytes = "1"

# data values
compact_str = "0.9"
smallvec = "1.15"
arc-swap = "1"
parking_lot = "0.12"
moka = { version = "0.12", features = ["future"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"

# tls (OpenSSL per objective, not rustls)
openssl = "0.10"
tokio-openssl = "0.6"

# transports
tokio-tungstenite = "0.29"
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
h2 = "0.4"
percent-encoding = "2"

# crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.13"
sha1 = "0.11"
sha2 = "0.11"
sha3 = "0.12"
shake = "0.1"
md-5 = "0.11"
hmac = "0.13"
aes = "0.9"
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }

# dns
hickory-resolver = "0.26"

# sockets
socket2 = { version = "0.6", features = ["all"] }

# config
serde = { version = "1", features = ["derive"] }
toml = "1.1"
base64 = "0.22"
hex = "0.4"

# saas panel integration
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde_json = "1"
regex = "1"
sysinfo = "0.39"

[profile.release]
lto = true
