[package]
name = "app"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "xray-rs"
path = "src/main.rs"

[dependencies]
kernel.workspace = true
proxy.workspace = true
transport.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
compact_str.workspace = true
anyhow.workspace = true
