[package]
name = "app"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "xray-rs"
path = "src/main.rs"

[features]
# Statically link OpenSSL for a portable binary.
vendored = ["transport/vendored"]

[dependencies]
kernel.workspace = true
proxy.workspace = true
transport.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
compact_str.workspace = true
anyhow.workspace = true
