[package]
name = "new_kernel"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
smallvec.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
compact_str.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
moka.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
uuid.workspace = true
sha1.workspace = true
sha2.workspace = true
md-5.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
hickory-resolver.workspace = true
socket2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
