[package]
name = "proxy"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kernel.workspace = true
transport.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
compact_str.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
uuid.workspace = true

# crypto
aes-gcm.workspace = true
aes.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
md-5.workspace = true
hmac.workspace = true
crc32fast.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
hex.workspace = true
