[package]
name = "saas"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "xray-saas"
path = "src/main.rs"

[features]
# Statically link OpenSSL (transport TLS + reqwest native-tls) for a portable binary.
vendored = ["transport/vendored"]

[dependencies]
kernel.workspace = true
proxy.workspace = true
transport.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
futures.workspace = true
bytes.workspace = true

compact_str.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
sysinfo.workspace = true
base64.workspace = true
hex.workspace = true

[dev-dependencies]
tokio.workspace = true
