[package]
name = "transport"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kernel.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
compact_str.workspace = true
thiserror.workspace = true
tracing.workspace = true
socket2.workspace = true
openssl.workspace = true
tokio-openssl.workspace = true
tokio-tungstenite.workspace = true
http.workspace = true
h2.workspace = true
base64.workspace = true
sha1.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
